removed firstpage html and script js

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 		</script>	
 	</head>
  <body>
+ <div id="firstLink">
+ 	<a href="#messages">Hello.</a>
+ </div>
+
  <div id="messages">
  No Messages Yet
  </div>
