--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 			// Receive from any event - this is recieved from the server's broadcast.emit
 			socket.on('chatmessage', function (data) {
 				console.log(data);
-				document.getElementById('messages').innerHTML = "" + data + 
- + "" + document.getElementById('messages').innerHTML;
+				document.getElementById('messages').innerHTML = "" + data + "" ;/*+ document.getElementById('messages').innerHTML;*/
 			});
 			
 			var sendmessage = function(message) {
@@ -32,6 +31,7 @@
 		</script>	
 	</head>
  <body>
+ <!-- USE IDs to comment javascript and the html -->
  <div id="firstLink">
  	<a href="#messages">Hello.</a>
  </div>
@@ -39,6 +39,7 @@
  <div id="messages">
  No Messages Yet
  </div>
+
  <input type="text" id="message" name="message">
  <input type="submit" value="submit" onclick="sendmessage(document.getElementById('message').value);">
  </body>
